kubernetes/components/observabilidade/fluentd-ds.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  annotations:
    deprecated.daemonset.template.generation: "1"
    description: Configurações de observabilidade do Sistema de Autocura Cognitiva
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"DaemonSet","metadata":{"annotations":{"description":"Configurações de observabilidade do Sistema de Autocura Cognitiva"},"labels":{"app":"fluentd","app.kubernetes.io/name":"observabilidade","app.kubernetes.io/part-of":"autocura"},"name":"fluentd","namespace":"autocura"},"spec":{"selector":{"matchLabels":{"app":"fluentd"}},"template":{"metadata":{"annotations":{"description":"Configurações de observabilidade do Sistema de Autocura Cognitiva"},"labels":{"app": [...]
  creationTimestamp: "2025-05-04T20:53:10Z"
  generation: 1
  labels:
    app: fluentd
    app.kubernetes.io/name: observabilidade
    app.kubernetes.io/part-of: autocura
  name: fluentd
  namespace: autocura
  resourceVersion: "16569"
  uid: 9fe45bb0-05cd-4a13-9a38-1356ff6647d6
spec:
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: fluentd
  template:
    metadata:
      annotations:
        description: Configurações de observabilidade do Sistema de Autocura Cognitiva
      creationTimestamp: null
      labels:
        app: fluentd
    spec:
      containers:
      - env:
        - name: FLUENT_ELASTICSEARCH_HOST
          value: elasticsearch
        - name: FLUENT_ELASTICSEARCH_PORT
          value: "9200"
        - name: FLUENT_ELASTICSEARCH_SCHEME
          value: http
        - name: K8S_NODE_NAME
          valueFrom:
            fieldRef:
              fieldPath: spec.nodeName
        image: fluent/fluentd-kubernetes-daemonset:v1.16-debian-elasticsearch7-1
        imagePullPolicy: IfNotPresent
        name: fluentd
        resources:
          limits:
            memory: 512Mi
          requests:
            cpu: 100m
            memory: 256Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /var/log
          name: varlog
        - mountPath: /var/lib/docker/containers
          name: varlibdockercontainers
          readOnly: true
        - mountPath: /fluentd/etc
          name: config
        - mountPath: /var/log/fluentd-buffers
          name: fluentd-buffers
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: fluentd
      serviceAccountName: fluentd
      terminationGracePeriodSeconds: 30
      tolerations:
      - effect: NoSchedule
        key: node-role.kubernetes.io/master
      - effect: NoExecute
        key: node.kubernetes.io/not-ready
        operator: Exists
      - effect: NoExecute
        key: node.kubernetes.io/unreachable
        operator: Exists
      - effect: NoSchedule
        key: node.kubernetes.io/disk-pressure
        operator: Exists
      - effect: NoSchedule
        key: node.kubernetes.io/memory-pressure
        operator: Exists
      - effect: NoSchedule
        key: node.kubernetes.io/pid-pressure
        operator: Exists
      - effect: NoSchedule
        key: node.kubernetes.io/unschedulable
        operator: Exists
      volumes:
      - hostPath:
          path: /var/log
          type: ""
        name: varlog
      - hostPath:
          path: /var/lib/docker/containers
          type: ""
        name: varlibdockercontainers
      - configMap:
          defaultMode: 420
          name: fluentd-config
        name: config
      - hostPath:
          path: /var/log/fluentd-buffers
          type: DirectoryOrCreate
        name: fluentd-buffers
  updateStrategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
    type: RollingUpdate
status:
  currentNumberScheduled: 1
  desiredNumberScheduled: 1
  numberMisscheduled: 0
  numberReady: 0
  numberUnavailable: 1
  observedGeneration: 1
  updatedNumberScheduled: 1
