kubernetes/components/observabilidade/elasticsearch-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  namespace: autocura
  labels:
    app: elasticsearch
spec:
  type: ClusterIP
  ports:
    - port: 9200
      name: http
    - port: 9300
      name: transport
  selector:
    app: elasticsearch
