kubernetes/components/observabilidade/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: observabilidade
  namespace: autocura
  labels:
    app: observabilidade
    component: autocura
spec:
  selector:
    app: observabilidade
  ports:
<<<<<<< HEAD
  - port: 8084
    targetPort: 8080
    name: http
  type: ClusterIP
=======
    - port: 8080
      targetPort: 8080
      nodePort: 30080
  type: NodePort
>>>>>>> origin/main
